--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.mat filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.svg filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
