Fix typos and log outputs with ExpR=1.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /Exp1_PXisPrcShfts.png
 /Exp1_arrPrcShftA.csv
 /Exp1_arrPrcShftO.csv
+/Exp1_perTrialBaselinePrcShfts.png
+/Exp1_perTrialOperantPrcShfts.png
+/Exp1_perTrialPrcShftA.png
+/Exp1_perTrialPrcShftO.png
+/Exp1_CCEPXi.png
+/Exp1_perTrialCCE.png
