--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,8 @@
 /Exp2_arrPrcShftA.csv
 /Exp2_arrPrcShftO.csv
 # generated figures from compute_PerTrialPrcShfts.m:
-/Exp1_perTrialBaselinePrcShfts.png
-/Exp1_perTrialOperantPrcShfts.png
-/Exp1_perTrialPrcShftA.png
-/Exp1_perTrialPrcShftO.png
-/Exp2_perTrialBaselinePrcShfts.png
-/Exp2_perTrialOperantPrcShfts.png
-/Exp2_perTrialPrcShftA.png
-/Exp2_perTrialPrcShftO.png
+/Exp1_perTrialPrcShfts.png
+/Exp2_perTrialPrcShfts.png
 # generated figures from compute_CCEPXi1.m
 /Exp1_CCEPXi.png
 /Exp2_CCEPXi.png
