--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Johannes Keyser
+#
+# SPDX-License-Identifier: CC0-1.0
+
 *.m~
 *.swp
 # generated output data from create_SimulationData.m:
